# VaKon3D

./: CMakeLists.txt  Doxyfile  README.md
assets/shaders/: line.frag  line.vert  outline.frag  outline.vert  skybox.frag  skybox.vert  triangle.frag  triangle.vert  widget.frag  widget.vert
docs/html/: _color_8h.html  _color_8h__dep__incl.dot  _color_8h_source.html  _custom_shader_program_8cpp.html  _custom_shader_program_8cpp__incl.dot  _custom_shader_program_8h.html  _custom_shader_program_8h__dep__incl.dot  _custom_shader_program_8h__incl.dot  _custom_shader_program_8h_source.html  _delegate_8h.html  _delegate_8h__dep__incl.dot  _delegate_8h__incl.dot  _delegate_8h_source.html  _font_8cpp.html  _font_8cpp__incl.dot  _font_8h.html  _font_8h__dep__incl.dot  _font_8h__incl.dot  _font_8h_source.html  _free_type_library_8cpp.html  _free_type_library_8cpp__incl.dot  _free_type_library_8h.html  _free_type_library_8h__dep__incl.dot  _free_type_library_8h__incl.dot  _free_type_library_8h_source.html  _gl_8cpp.html  _gl_8cpp__incl.dot  _gl_8h.html  _gl_8h__dep__incl.dot  _gl_8h__incl.dot  _gl_8h_source.html  _glad_wrapper_8cpp.html  _glad_wrapper_8cpp__incl.dot  _glad_wrapper_8h.html  _glad_wrapper_8h__incl.dot  _glad_wrapper_8h_source.html  _glfw_wrapper_8cpp.html  _glfw_wrapper_8cpp__incl.dot  _glfw_wrapper_8h.html  _glfw_wrapper_8h__dep__incl.dot  (+358 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_1a.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  (+38 more)
lib/base-game/: CMakeLists.txt
lib/utils/: CMakeLists.txt
(+103 files in other folders)
