cmake_minimum_required(VERSION 3.2...3.5)

project(VaKon2D-project VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED true)

set(DEPENDENCIES_DIR_NAME dependencies)
set(DEPENDENCIES_PATH ${CMAKE_CURRENT_SOURCE_DIR}/${DEPENDENCIES_DIR_NAME})

if (DEFINED CMAKE_BUILD_TYPE)
	if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
		message(STATUS "Project build type: DEBUG")
		add_compile_definitions(OPENGL_DEBUG)
	endif ()
endif ()

add_subdirectory(dependencies/freetype-2.10.0)
add_subdirectory(dependencies/glfw-3.3.7)
add_subdirectory(dependencies/googlebenchmark)
add_subdirectory(dependencies/googletest)

add_subdirectory(lib/core/app)
add_subdirectory(lib/core/camera)
add_subdirectory(lib/core/console)
add_subdirectory(lib/core/core-wrappers)
add_subdirectory(lib/core/delegate)
add_subdirectory(lib/core/freetype-wrapper)
add_subdirectory(lib/core/graphics)
add_subdirectory(lib/core/input-devices)
add_subdirectory(lib/core/logger)
add_subdirectory(lib/core/model-parser)
add_subdirectory(lib/core/scene-objects)
add_subdirectory(lib/core/socket)
add_subdirectory(lib/core/window)
add_subdirectory(lib/core/world)
add_subdirectory(lib/core/wsa)

add_subdirectory(lib/editor/connectors)
add_subdirectory(lib/editor/editor-integration)
add_subdirectory(lib/editor/VaKon3DEditor)

add_subdirectory(lib/boost)
add_subdirectory(lib/glad)
add_subdirectory(lib/glew)
add_subdirectory(lib/glm)
add_subdirectory(lib/misc)
add_subdirectory(lib/utils)
